--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/source-code-pro": "^4.5.6",
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.25.0",
+    "gray-matter": "^4.0.3",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-modal": "^3.14.4",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "stripe": "^8.210.0",
     "swr": "^1.2.2",
     "wicg-inert": "^3.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@types/react-dom": "^17.0.14",
