--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "wicg-inert": "^3.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
