--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     "@sendgrid/mail": "^7.6.2",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.25.0",
+    "base-64": "^1.0.0",
+    "dotenv": "^16.0.3",
+    "exclude": "^1.0.0",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
     "react-modal": "^3.14.4",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "router": "^1.3.7",
     "stripe": "^8.210.0",
     "swr": "^1.2.2",
     "wicg-inert": "^3.1.1"
@@ -34,6 +39,7 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/base-64": "^1.0.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
     "@types/react-dom": "^17.0.14",
