--- a/package.json
+++ b/package.json
@@ -6,50 +6,66 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "watch": "npm-watch"
   },
   "dependencies": {
-    "@fontsource/source-code-pro": "^4.5.6",
-    "@fortawesome/fontawesome-svg-core": "^6.1.0",
-    "@fortawesome/free-brands-svg-icons": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.0",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@sendgrid/mail": "^7.6.2",
-    "@stripe/react-stripe-js": "^1.7.0",
-    "@stripe/stripe-js": "^1.25.0",
+    "@fontsource/source-code-pro": "^4.5.12",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@sendgrid/mail": "^7.7.0",
+    "@stripe/react-stripe-js": "^1.14.1",
+    "@stripe/stripe-js": "^1.42.1",
     "base-64": "^1.0.0",
+    "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
     "exclude": "^1.0.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
-    "micro": "^9.3.4",
+    "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
-    "next": "^12.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.29.0",
-    "react-modal": "^3.14.4",
+    "next": "^13.0.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
+    "react-modal": "^3.16.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "router": "^1.3.7",
-    "stripe": "^8.210.0",
-    "swr": "^1.2.2",
-    "wicg-inert": "^3.1.1"
+    "stripe": "^10.15.0",
+    "swr": "^1.3.0",
+    "watch": "^1.0.2",
+    "wicg-inert": "^3.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "@tailwindcss/typography": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
     "@types/base-64": "^1.0.0",
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
-    "@types/react-dom": "^17.0.14",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "^18.0.8",
     "@types/react-modal": "^3.13.1",
-    "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.23",
-    "typescript": "4.6.2"
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.1",
+    "npm-watch": "^0.11.0",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
+  },
+  "watch": {
+    "build": {
+      "patterns": [
+        "components",
+        "pages",
+        "public",
+        "styles"
+      ],
+      "extensions": "js,jsx,tsx,ts,css,scss,md"
+    }
   }
 }
