--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "router": "^1.3.7",
+    "sharp": "^0.31.2",
     "stripe": "^10.15.0",
     "swr": "^1.3.0",
     "watch": "^1.0.2",
