--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "13.1.6",
     "@next/font": "13.1.6",
+    "@octokit/rest": "^19.0.8",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
