--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "rehype-preset-minify": "6.0.0",
     "rehype-prism-plus": "^1.5.0",
     "rehype-slug": "^5.0.0",
-    "remark": "^14.0.2",
+    "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.2",
     "remark-math": "^5.1.1",
     "tailwindcss": "^3.2.2",
     "unist-util-visit": "^4.1.0"
