--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
     "remark-math": "^5.1.1",
+    "stripe": "^12.6.0",
     "tailwindcss": "^3.2.2",
     "unist-util-visit": "^4.1.0"
   },
