--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-macros": "^3.1.0",
     "contentlayer": "0.3.0",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
