--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "remark-math": "^5.1.1",
     "stripe": "^12.6.0",
     "tailwindcss": "^3.2.2",
+    "typed.js": "^2.0.16",
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
