--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
+    "react-youtube": "^10.1.0",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^6.1.0",
     "rehype-citation": "^0.5.0",
