--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.13",
     "babel-plugin-macros": "^3.1.0",
     "contentlayer": "0.3.0",
+    "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
