--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "watch": "npm-watch"
   },
   "dependencies": {
-    "@fontsource/source-code-pro": "^5.0.18",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -18,9 +17,11 @@
     "@sendgrid/mail": "^8.1.3",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/escape-html": "^1.0.4",
     "base-64": "^1.0.0",
-    "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
     "exclude": "^1.0.0",
@@ -29,8 +30,8 @@
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
     "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-modal": "^3.16.1",
@@ -41,11 +42,13 @@
     "sharp": "^0.33.4",
     "stripe": "^15.9.0",
     "swr": "^2.2.5",
+    "typed.js": "^2.1.0",
     "watch": "^0.13.0",
     "wicg-inert": "^3.1.2",
     "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.13",
     "@types/base-64": "^1.0.2",
