--- a/package.json
+++ b/package.json
@@ -14,19 +14,36 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.6.0",
+    "@keycloak/keycloak-admin-client": "^24.0.5",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@sendgrid/mail": "^8.1.3",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.40.1",
+    "@trpc/client": "^11.0.0-rc.390",
+    "@trpc/next": "^11.0.0-rc.390",
+    "@trpc/react-query": "^11.0.0-rc.390",
+    "@trpc/server": "^11.0.0-rc.390",
     "@types/escape-html": "^1.0.4",
     "base-64": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
     "exclude": "^1.0.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.390.0",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
     "next": "^14.2.3",
@@ -42,10 +59,13 @@
     "sharp": "^0.33.4",
     "stripe": "^15.9.0",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typed.js": "^2.1.0",
     "watch": "^0.13.0",
     "wicg-inert": "^3.1.2",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
