--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
     "@keycloak/keycloak-admin-client": "^24.0.5",
-    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -34,6 +33,7 @@
     "@trpc/react-query": "^11.0.0-rc.390",
     "@trpc/server": "^11.0.0-rc.390",
     "@types/escape-html": "^1.0.4",
+    "axios": "^1.7.2",
     "base-64": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -43,10 +43,12 @@
     "exclude": "^1.0.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.390.0",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
