Email verification without keycloak UI

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
+APP_URL="http://localhost:3000"
 NEXTAUTH_SECRET=""
+SMTP_HOST=""
+SMTP_PORT="2525"
+SMTP_USER=""
+SMTP_PASS=""
 STRIPE_SECRET_KEY=""
 KEYCLOAK_CLIENT_ID="app"
 KEYCLOAK_CLIENT_SECRET="7JryN6EVIYtCwN4iHheacjp986Rfy5FJ"
