--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
@@ -75,7 +76,9 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.13",
     "@types/base-64": "^1.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.14.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
