Add "My donations" page with one-time stripe donations list

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 APP_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL_INTERNAL="http://localhost:3000"
 NEXTAUTH_SECRET=""
 SMTP_HOST=""
 SMTP_PORT="2525"
@@ -6,7 +8,7 @@ SMTP_USER=""
 SMTP_PASS=""
 STRIPE_SECRET_KEY=""
 KEYCLOAK_CLIENT_ID="app"
-KEYCLOAK_CLIENT_SECRET="7JryN6EVIYtCwN4iHheacjp986Rfy5FJ"
+KEYCLOAK_CLIENT_SECRET=""
 KEYCLOAK_REALM_NAME="monerofund"
 BTCPAY_URL=""
 BTCPAY_STORE_ID=""
@@ -14,3 +16,5 @@ BTCPAY_API_KEY=""
 SENDGRID_RECIPIENT=""
 SENDGRID_VERIFIED_SENDER=""
 SENDGRID_API_KEY=""
+
+NEXT_PUBLIC_BTCPAY_API_KEY=""
