--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
     "@keycloak/keycloak-admin-client": "^24.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@sendgrid/mail": "^8.1.3",
@@ -38,6 +41,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "escape-html": "^1.0.3",
     "exclude": "^1.0.0",
@@ -62,6 +66,7 @@
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.33.4",
     "stripe": "^15.9.0",
+    "superjson": "^2.2.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
