Display crypto donations in "My donations" page

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ KEYCLOAK_REALM_NAME="monerofund"
 BTCPAY_URL=""
 BTCPAY_STORE_ID=""
 BTCPAY_API_KEY=""
+BTCPAY_WEBHOOK_SECRET=""
 SENDGRID_RECIPIENT=""
 SENDGRID_VERIFIED_SENDER=""
 SENDGRID_API_KEY=""
