feat: multiple funds support

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,40 @@
 APP_URL="http://localhost:3000"
+DATABASE_URL="postgresql://docker:docker@localhost:5432/monerofund?schema=public"
+
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
 NEXTAUTH_SECRET=""
-SMTP_HOST=""
+
+SMTP_HOST="sandbox.smtp.mailtrap.io"
 SMTP_PORT="2525"
 SMTP_USER=""
 SMTP_PASS=""
-STRIPE_SECRET_KEY=""
+
+STRIPE_MONERO_SECRET_KEY=""
+STRIPE_MONERO_WEBHOOK_SECRET=""
+STRIPE_FIRO_SECRET_KEY=""
+STRIPE_FIRO_WEBHOOK_SECRET=""
+STRIPE_PRIVACY_GUIDES_SECRET_KEY=""
+STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET=""
+STRIPE_GENERAL_SECRET_KEY=""
+STRIPE_GENERAL_WEBHOOK_SECRET=""
+
 KEYCLOAK_CLIENT_ID="app"
 KEYCLOAK_CLIENT_SECRET=""
-KEYCLOAK_REALM_NAME="monerofund"
-BTCPAY_URL=""
-BTCPAY_STORE_ID=""
+KEYCLOAK_REALM_NAME="magic"
+
+BTCPAY_URL="http://localhost"
 BTCPAY_API_KEY=""
-BTCPAY_WEBHOOK_SECRET=""
+BTCPAY_MONERO_STORE_ID=""
+BTCPAY_MONERO_WEBHOOK_SECRET=""
+BTCPAY_FIRO_STORE_ID=""
+BTCPAY_FIRO_WEBHOOK_SECRET=""
+BTCPAY_PRIVACY_GUIDES_STORE_ID=""
+BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET=""
+BTCPAY_GENERAL_STORE_ID=""
+BTCPAY_GENERAL_WEBHOOK_SECRET=""
+
 SENDGRID_RECIPIENT=""
 SENDGRID_VERIFIED_SENDER=""
 SENDGRID_API_KEY=""
 
-NEXT_PUBLIC_BTCPAY_API_KEY=""
