feat: add different color schemes for each fund and some fixes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_URL="http://localhost:3000"
-DATABASE_URL="postgresql://docker:docker@localhost:5432/monerofund?schema=public"
+DATABASE_URL="postgresql://docker:docker@localhost:5432/magic?schema=public"
 
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
@@ -19,6 +19,7 @@ STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET=""
 STRIPE_GENERAL_SECRET_KEY=""
 STRIPE_GENERAL_WEBHOOK_SECRET=""
 
+KEYCLOAK_URL="http://localhost:8080"
 KEYCLOAK_CLIENT_ID="app"
 KEYCLOAK_CLIENT_SECRET=""
 KEYCLOAK_REALM_NAME="magic"
