--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,16 +1,135 @@
+version: '3'
 services:
   btcpayserver:
-    image: 'btcpayserver/monero'
+    restart: unless-stopped
+    container_name: generated_btcpayserver_1
+    image: ${BTCPAY_IMAGE:-btcpayserver/btcpayserver:1.13.3-altcoins}
+    expose:
+      - '49392'
     environment:
-      - BTCPAY_HOST=localhost
-      - BTCPAYGEN_CRYPTO1=xmr
-      - BTCPAY_ENABLE_XMR=true
-      - XMR_RPC_URL=https://xmr-node.cakewallet.com:18081
-      # - XMR_WALLET_RPC_URL=https://xmr-node.cakewallet.com:18083
-      # - XMR_WALLET_RPC_USER=myrpcuser
-      # - XMR_WALLET_RPC_PASSWORD=myrpcpassword
+      BTCPAY_POSTGRES: User ID=postgres;Host=postgres;Port=5432;Application Name=btcpayserver;Database=btcpayserver${NBITCOIN_NETWORK:-regtest}
+      BTCPAY_EXPLORERPOSTGRES: User ID=postgres;Host=postgres;Port=5432;Application Name=btcpayserver;MaxPoolSize=80;Database=nbxplorer${NBITCOIN_NETWORK:-regtest}
+      BTCPAY_NETWORK: ${NBITCOIN_NETWORK:-regtest}
+      BTCPAY_BIND: 0.0.0.0:49392
+      BTCPAY_ROOTPATH: ${BTCPAY_ROOTPATH:-/}
+      BTCPAY_SSHCONNECTION: 'root@host.docker.internal'
+      BTCPAY_SSHTRUSTEDFINGERPRINTS: ${BTCPAY_SSHTRUSTEDFINGERPRINTS}
+      BTCPAY_SSHKEYFILE: ${BTCPAY_SSHKEYFILE}
+      BTCPAY_SSHAUTHORIZEDKEYS: ${BTCPAY_SSHAUTHORIZEDKEYS}
+      BTCPAY_DEBUGLOG: btcpay.log
+      BTCPAY_UPDATEURL: https://api.github.com/repos/btcpayserver/btcpayserver/releases/latest
+      BTCPAY_DOCKERDEPLOYMENT: 'true'
+      BTCPAY_CHAINS: 'xmr'
+      BTCPAY_XMR_DAEMON_URI: http://xmr-node.cakewallet.com:18081
+      BTCPAY_XMR_WALLET_DAEMON_URI: http://monerod_wallet:18082
+      BTCPAY_XMR_WALLET_DAEMON_WALLETDIR: /root/xmr_wallet
+    #      HIDDENSERVICE_NAME: BTCPayServer
+    #      HIDDENSERVICE_REVERSEPROXY: nginx
+    #      BTCPAY_TORRCFILE: /usr/local/etc/tor/torrc-2
+    #      BTCPAY_SOCKSENDPOINT: tor:9050
+    labels:
+      traefik.enable: 'true'
+      traefik.http.routers.btcpayserver.rule: Host(`${BTCPAY_HOST}`)
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
+
+    links:
+      - postgres
+    volumes:
+      - 'btcpay_datadir:/datadir'
+      - 'nbxplorer_datadir:/root/.nbxplorer'
+      - 'btcpay_pluginsdir:/root/.btcpayserver/Plugins'
+      - 'xmr_wallet:/root/xmr_wallet'
+      - 'tor_servicesdir:/var/lib/tor/hidden_services'
+      - 'tor_torrcdir:/usr/local/etc/tor/'
     ports:
-      - '80:80'
-    # volumes:
-    #   - ./btcpayserver_datadir:/data
-    #   - /var/run/docker.sock:/var/run/docker.sock
+      - '${NOREVERSEPROXY_HTTP_PORT:-80}:49392'
+  #  monerod:
+  #    restart: unless-stopped
+  #    container_name: btcpayserver_monerod
+  #    image: btcpayserver/monero:0.18.3.3
+  #    entrypoint: monerod --rpc-bind-ip=0.0.0.0 --confirm-external-bind --rpc-bind-port=18081 --non-interactive --block-notify="/bin/sh ./scripts/notifier.sh -X GET http://btcpayserver:49392/monerolikedaemoncallback/block?cryptoCode=xmr&hash=%s" --hide-my-port --prune-blockchain --enable-dns-blocklist
+  #    expose:
+  #    - "18081"
+  #    volumes:
+  #    - "xmr_data:/home/monero/.bitmonero"
+  monerod_wallet:
+    restart: unless-stopped
+    container_name: btcpayserver_monero_wallet
+    image: btcpayserver/monero:0.18.3.3
+    entrypoint: monero-wallet-rpc --rpc-bind-ip=0.0.0.0 --disable-rpc-login --confirm-external-bind --rpc-bind-port=18082 --non-interactive --trusted-daemon  --daemon-address=xmr-node.cakewallet.com:18081 --wallet-file=/wallet/wallet --password-file /wallet/password --tx-notify="/bin/sh ./scripts/notifier.sh  -X GET http://btcpayserver:49392/monerolikedaemoncallback/tx?cryptoCode=xmr&hash=%s"
+    expose:
+      - '18082'
+    ports:
+      - 18082:18082
+    volumes:
+      - 'xmr_wallet:/wallet'
+  #    depends_on:
+  #    - monerod
+  #  tor:
+  #    restart: unless-stopped
+  #    image: btcpayserver/tor:0.4.8.10
+  #    container_name: tor
+  #    environment:
+  #      TOR_PASSWORD: btcpayserver
+  #      TOR_ADDITIONAL_CONFIG: /usr/local/etc/tor/torrc-2
+  #      TOR_EXTRA_ARGS: |
+  #        CookieAuthentication 1
+  #    expose:
+  #    - "9050"
+  #    - "9051"
+  #    volumes:
+  #    - "tor_datadir:/home/tor/.tor"
+  #    - "tor_torrcdir:/usr/local/etc/tor"
+  #    - "tor_servicesdir:/var/lib/tor/hidden_services"
+  #  tor-gen:
+  #    restart: unless-stopped
+  #    image: btcpayserver/docker-gen:0.10.7
+  #    container_name: tor-gen
+  #    volumes:
+  #    - "/var/run/docker.sock:/tmp/docker.sock:ro"
+  #    - "./torrc.tmpl:/etc/docker-gen/templates/torrc.tmpl:ro"
+  #    - "tor_torrcdir:/usr/local/etc/tor"
+  #    entrypoint: /usr/local/bin/docker-gen -notify-sighup tor -watch -wait 5s:30s /etc/docker-gen/templates/torrc.tmpl /usr/local/etc/tor/torrc-2
+  #    links:
+  #    - tor
+  nbxplorer:
+    restart: unless-stopped
+    container_name: generated_nbxplorer_1
+    image: nicolasdorier/nbxplorer:2.5.2
+    expose:
+      - '32838'
+    environment:
+      NBXPLORER_NETWORK: ${NBITCOIN_NETWORK:-regtest}
+      NBXPLORER_BIND: 0.0.0.0:32838
+      NBXPLORER_TRIMEVENTS: 10000
+      NBXPLORER_SIGNALFILESDIR: /datadir
+      NBXPLORER_POSTGRES: User ID=postgres;Host=postgres;Port=5432;Application Name=nbxplorer;MaxPoolSize=20;Database=nbxplorer${NBITCOIN_NETWORK:-regtest}
+      NBXPLORER_AUTOMIGRATE: 1
+      NBXPLORER_NOMIGRATEEVTS: 1
+      NBXPLORER_DELETEAFTERMIGRATION: 1
+    links:
+      - postgres
+    volumes:
+      - 'nbxplorer_datadir:/datadir'
+  postgres:
+    restart: unless-stopped
+    container_name: generated_postgres_1
+    shm_size: 256mb
+    image: btcpayserver/postgres:13.13
+    command: ['-c', 'random_page_cost=1.0', '-c', 'shared_preload_libraries=pg_stat_statements']
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+    volumes:
+      - 'postgres_datadir:/var/lib/postgresql/data'
+volumes:
+  btcpay_datadir:
+  btcpay_pluginsdir:
+  xmr_wallet:
+  xmr_data:
+  tor_datadir:
+  tor_torrcdir:
+  tor_servicesdir:
+  nbxplorer_datadir:
+  postgres_datadir:
+networks: {}
