--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,85 @@
-version: '3.7'
-
 services:
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: cloudflared
+    restart: unless-stopped
+    command: tunnel --no-autoupdate run
+    environment:
+      TUNNEL_TOKEN: ${CLOUDFLARE_TUNNEL_TOKEN}
+      REAL_IP_HEADER: Cf-Connecting-Ip
+    depends_on:
+      - nginx
 
-  sample:
-    container_name: monerofund-frontend-page
+  nginx:
+    image: nginx:1
+    container_name: nginx
+    restart: unless-stopped
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app
+
+  app:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: app
+    restart: unless-stopped
     environment:
-      - CHOKIDAR_USEPOLLING=true
-    stdin_open: true
-    labels:
-      traefik.enable: true
-      traefik.http.routers.openpico.rule: Host(`monerofund.org`)
-      traefik.port: 3000
-    ports:
-        - 3000:3000
+      APP_URL: http://localhost:3000
+      DATABASE_URL: ${DATABASE_URL}
+
+      NEXTAUTH_URL: http://localhost:3000
+      NEXTAUTH_URL_INTERNAL: http://localhost:3000
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+
+      SMTP_HOST: email-smtp.us-east-2.amazonaws.com
+      SMTP_PORT: 587
+      SMTP_USER: ${SMTP_USER}
+      SMTP_PASS: ${SMTP_PASS}
+
+      STRIPE_MONERO_SECRET_KEY: ${STRIPE_MONERO_SECRET_KEY}
+      STRIPE_MONERO_WEBHOOK_SECRET: ${STRIPE_MONERO_WEBHOOK_SECRET}
+      STRIPE_FIRO_SECRET_KEY: ${STRIPE_FIRO_SECRET_KEY}
+      STRIPE_FIRO_WEBHOOK_SECRET: ${STRIPE_FIRO_WEBHOOK_SECRET}
+      STRIPE_PRIVACY_GUIDES_SECRET_KEY: ${STRIPE_PRIVACY_GUIDES_SECRET_KEY}
+      STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET: ${STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET}
+      STRIPE_GENERAL_SECRET_KEY: ${STRIPE_GENERAL_SECRET_KEY}
+      STRIPE_GENERAL_WEBHOOK_SECRET: ${STRIPE_GENERAL_WEBHOOK_SECRET}
+
+      KEYCLOAK_URL: ${KEYCLOAK_URL}
+      KEYCLOAK_CLIENT_ID: app
+      KEYCLOAK_CLIENT_SECRET: ${KEYCLOAK_CLIENT_SECRET}
+      KEYCLOAK_REALM_NAME: magic
+
+      BTCPAY_URL: ${BTCPAY_URL}
+      BTCPAY_API_KEY: ${BTCPAY_API_KEY}
+      BTCPAY_MONERO_STORE_ID: ${BTCPAY_MONERO_STORE_ID}
+      BTCPAY_MONERO_WEBHOOK_SECRET: ${BTCPAY_MONERO_WEBHOOK_SECRET}
+      BTCPAY_FIRO_STORE_ID: ${BTCPAY_FIRO_STORE_ID}
+      BTCPAY_FIRO_WEBHOOK_SECRET: ${BTCPAY_FIRO_WEBHOOK_SECRET}
+      BTCPAY_PRIVACY_GUIDES_STORE_ID: ${BTCPAY_PRIVACY_GUIDES_STORE_ID}
+      BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET: ${BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET}
+      BTCPAY_GENERAL_STORE_ID: ${BTCPAY_GENERAL_STORE_ID}
+      BTCPAY_GENERAL_WEBHOOK_SECRET: ${BTCPAY_GENERAL_WEBHOOK_SECRET}
+
+      SENDGRID_RECIPIENT: a
+      SENDGRID_VERIFIED_SENDER: a
+      SENDGRID_API_KEY: a
+
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:16-alpine
+    container_name: postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: magic
+      POSTGRES_DB: magic
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - 'postgres_data:/var/lib/postgresql/data'
+
+volumes:
+  postgres_data:
