feat: replace Sendgrid with SES

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ SMTP_HOST="sandbox.smtp.mailtrap.io"
 SMTP_PORT="2525"
 SMTP_USER=""
 SMTP_PASS=""
+SES_VERIFIED_SENDER=""
 
 STRIPE_MONERO_SECRET_KEY=""
 STRIPE_MONERO_WEBHOOK_SECRET=""
@@ -35,7 +36,7 @@ BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET=""
 BTCPAY_GENERAL_STORE_ID=""
 BTCPAY_GENERAL_WEBHOOK_SECRET=""
 
-SENDGRID_RECIPIENT=""
-SENDGRID_VERIFIED_SENDER=""
-SENDGRID_API_KEY=""
-
+NEXT_PUBLIC_MONERO_APPLICATION_RECIPIENT=""
+NEXT_PUBLIC_FIRO_APPLICATION_RECIPIENT=""
+NEXT_PUBLIC_PRIVACY_GUIDES_APPLICATION_RECIPIENT=""
+NEXT_PUBLIC_GENERAL_APPLICATION_RECIPIENT=""
