--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,10 @@ jobs:
             BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET=${{ secrets.BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET }} \
             BTCPAY_GENERAL_STORE_ID=${{ secrets.BTCPAY_GENERAL_STORE_ID }} \
             BTCPAY_GENERAL_WEBHOOK_SECRET=${{ secrets.BTCPAY_GENERAL_WEBHOOK_SECRET }} \
-            SENDGRID_RECIPIENT=${{ secrets.SENDGRID_RECIPIENT }} \
-            SENDGRID_VERIFIED_SENDER=${{ secrets.SENDGRID_VERIFIED_SENDER }} \
-            SENDGRID_API_KEY=${{ secrets.SENDGRID_API_KEY }} \
+            SES_VERIFIED_SENDER=${{ secrets.SES_VERIFIED_SENDER }}\ 
+            MONERO_APPLICATION_RECIPIENT=${{ secrets.MONERO_APPLICATION_RECIPIENT }} \
+            FIRO_APPLICATION_RECIPIENT=${{ secrets.FIRO_APPLICATION_RECIPIENT }} \
+            PRIVACY_GUIDES_APPLICATION_RECIPIENT=${{ secrets.PRIVACY_GUIDES_APPLICATION_RECIPIENT }} \
+            GENERAL_APPLICATION_RECIPIENT=${{ secrets.GENERAL_APPLICATION_RECIPIENT }} \
             docker compose up -d --build
           EOF
