--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       SMTP_PORT: 587
       SMTP_USER: ${SMTP_USER}
       SMTP_PASS: ${SMTP_PASS}
+      SES_VERIFIED_SENDER: info@magicgrants.org
 
       STRIPE_MONERO_SECRET_KEY: ${STRIPE_MONERO_SECRET_KEY}
       STRIPE_MONERO_WEBHOOK_SECRET: ${STRIPE_MONERO_WEBHOOK_SECRET}
@@ -63,9 +64,10 @@ services:
       BTCPAY_GENERAL_STORE_ID: ${BTCPAY_GENERAL_STORE_ID}
       BTCPAY_GENERAL_WEBHOOK_SECRET: ${BTCPAY_GENERAL_WEBHOOK_SECRET}
 
-      SENDGRID_RECIPIENT: a
-      SENDGRID_VERIFIED_SENDER: a
-      SENDGRID_API_KEY: a
+      NEXT_PUBLIC_MONERO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
+      NEXT_PUBLIC_FIRO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
+      NEXT_PUBLIC_PRIVACY_GUIDES_APPLICATION_RECIPIENT: monerofund@magicgrants.org
+      NEXT_PUBLIC_GENERAL_APPLICATION_RECIPIENT: monerofund@magicgrants.org
 
     depends_on:
       - postgres
