--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,14 +55,8 @@ services:
 
       BTCPAY_URL: ${BTCPAY_URL}
       BTCPAY_API_KEY: ${BTCPAY_API_KEY}
-      BTCPAY_MONERO_STORE_ID: ${BTCPAY_MONERO_STORE_ID}
-      BTCPAY_MONERO_WEBHOOK_SECRET: ${BTCPAY_MONERO_WEBHOOK_SECRET}
-      BTCPAY_FIRO_STORE_ID: ${BTCPAY_FIRO_STORE_ID}
-      BTCPAY_FIRO_WEBHOOK_SECRET: ${BTCPAY_FIRO_WEBHOOK_SECRET}
-      BTCPAY_PRIVACY_GUIDES_STORE_ID: ${BTCPAY_PRIVACY_GUIDES_STORE_ID}
-      BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET: ${BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET}
-      BTCPAY_GENERAL_STORE_ID: ${BTCPAY_GENERAL_STORE_ID}
-      BTCPAY_GENERAL_WEBHOOK_SECRET: ${BTCPAY_GENERAL_WEBHOOK_SECRET}
+      BTCPAY_STORE_ID: ${BTCPAY_STORE_ID}
+      BTCPAY_WEBHOOK_SECRET: ${BTCPAY_WEBHOOK_SECRET}
 
       MONERO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
       FIRO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
