--- a/.env.example
+++ b/.env.example
@@ -20,21 +20,15 @@ STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET=""
 STRIPE_GENERAL_SECRET_KEY=""
 STRIPE_GENERAL_WEBHOOK_SECRET=""
 
+BTCPAY_URL="http://localhost"
+BTCPAY_API_KEY=""
+BTCPAY_STORE_ID=""
+BTCPAY_WEBHOOK_SECRET=""
+
 KEYCLOAK_URL="http://localhost:8080"
 KEYCLOAK_CLIENT_ID="app"
 KEYCLOAK_CLIENT_SECRET=""
 KEYCLOAK_REALM_NAME="magic"
-
-BTCPAY_URL="http://localhost"
-BTCPAY_API_KEY=""
-BTCPAY_MONERO_STORE_ID=""
-BTCPAY_MONERO_WEBHOOK_SECRET=""
-BTCPAY_FIRO_STORE_ID=""
-BTCPAY_FIRO_WEBHOOK_SECRET=""
-BTCPAY_PRIVACY_GUIDES_STORE_ID=""
-BTCPAY_PRIVACY_GUIDES_WEBHOOK_SECRET=""
-BTCPAY_GENERAL_STORE_ID=""
-BTCPAY_GENERAL_WEBHOOK_SECRET=""
 
 MONERO_APPLICATION_RECIPIENT=""
 FIRO_APPLICATION_RECIPIENT=""
