--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "react-modal": "^3.16.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "router": "^1.3.8",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.33.4",
     "stripe": "^15.9.0",
@@ -89,11 +88,11 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.4.19",
-    "eslint": "8.26.0",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.2.3",
     "npm-watch": "^0.13.0",
     "postcss": "^8.4.38",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.3",
     "prisma": "^5.15.1",
     "tailwindcss": "^3.4.3",
     "typescript": "5.1.6"
