feat: perk purchase (wip)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 APP_URL="http://localhost:3000"
-DATABASE_URL="postgresql://docker:docker@localhost:5432/magic?schema=public"
+DATABASE_URL="postgresql://magic:magic@magic-postgres:5432/magic?schema=public"
+
+NEXT_PUBLIC_STRAPI_URL="http://172.17.0.1:1337"
+STRAPI_API_URL="http://172.17.0.1:1337/api"
+STRAPI_API_TOKEN=""
 
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
@@ -20,12 +24,12 @@ STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET=""
 STRIPE_GENERAL_SECRET_KEY=""
 STRIPE_GENERAL_WEBHOOK_SECRET=""
 
-BTCPAY_URL="http://localhost"
+BTCPAY_URL="http://btcpayserver:49392"
 BTCPAY_API_KEY=""
 BTCPAY_STORE_ID=""
 BTCPAY_WEBHOOK_SECRET=""
 
-KEYCLOAK_URL="http://localhost:8080"
+KEYCLOAK_URL="http://keycloak:8080"
 KEYCLOAK_CLIENT_ID="app"
 KEYCLOAK_CLIENT_SECRET=""
 KEYCLOAK_REALM_NAME="magic"
