feat: keep points history in strapi and move perks to its own page

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,6 @@ NEXT_PUBLIC_STRAPI_URL="http://172.17.0.1:1337"
 STRAPI_API_URL="http://172.17.0.1:1337/api"
 STRAPI_API_TOKEN=""
 
-NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
 NEXTAUTH_SECRET=""
@@ -41,3 +40,8 @@ MONERO_APPLICATION_RECIPIENT=""
 FIRO_APPLICATION_RECIPIENT=""
 PRIVACY_GUIDES_APPLICATION_RECIPIENT=""
 GENERAL_APPLICATION_RECIPIENT=""
+
+NEXT_PUBLIC_MONERO_APPLICATION_RECIPIENT=""
+NEXT_PUBLIC_FIRO_APPLICATION_RECIPIENT=""
+NEXT_PUBLIC_PRIVACY_GUIDES_APPLICATION_RECIPIENT=""
+NEXT_PUBLIC_GENERAL_APPLICATION_RECIPIENT=""
