--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/escape-html": "^1.0.4",
     "axios": "^1.7.4",
     "base-64": "^1.0.0",
+    "bullmq": "^5.25.6",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -48,6 +49,7 @@
     "exclude": "^1.0.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.390.0",
