feat: send email with tracking info on webhook call from printful

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,8 @@ KEYCLOAK_CLIENT_ID="app"
 KEYCLOAK_CLIENT_SECRET=""
 KEYCLOAK_REALM_NAME="magic"
 
+PRINTFUL_WEBHOOK_SECRET=""
+
 MONERO_APPLICATION_RECIPIENT=""
 FIRO_APPLICATION_RECIPIENT=""
 PRIVACY_GUIDES_APPLICATION_RECIPIENT=""
