chore(docker-compose.prod.yml): add redis service

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,6 +21,11 @@ services:
     depends_on:
       - app
 
+  redis:
+    container_name: redis
+    image: redis:7-alpine
+    restart: unless-stopped
+
   app:
     build:
       context: .
