--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
@@ -47,6 +47,7 @@
     "cmdk": "^1.0.0",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.5.1",
     "escape-html": "^1.0.3",
     "exclude": "^1.0.0",
     "fs": "^0.0.1-security",
