--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,6 +33,7 @@ services:
     container_name: app
     restart: unless-stopped
     environment:
+      NODE_ENV: production
       APP_URL: https://donate.magicgrants.org
       DATABASE_URL: ${DATABASE_URL}
 
@@ -40,6 +41,11 @@ services:
       NEXTAUTH_URL_INTERNAL: http://localhost:3000
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       USER_SETTINGS_JWT_SECRET: ${USER_SETTINGS_JWT_SECRET}
+
+      STRAPI_CDN_PROTOCOL: https
+      STRAPI_CDN_HOST: ${STRAPI_CDN_HOST}
+      STRAPI_CDN_PORT: 443
+      STRAPI_CDN_PATHNAME: /
 
       SMTP_HOST: email-smtp.us-east-2.amazonaws.com
       SMTP_PORT: 587
