chore: add missing strapi env vars

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -42,6 +42,8 @@ services:
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       USER_SETTINGS_JWT_SECRET: ${USER_SETTINGS_JWT_SECRET}
 
+      STRAPI_API_URL: ${STRAPI_API_URL}
+      STRAPI_API_TOKEN: ${STRAPI_API_TOKEN}
       STRAPI_CDN_PROTOCOL: https
       STRAPI_CDN_HOST: ${STRAPI_CDN_HOST}
       STRAPI_CDN_PORT: 443
