--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ http {
         server_name donate.magicgrants.org;
 
         location / {
-            proxy_pass http://app:3000;
+            proxy_pass http://magic-app:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -19,7 +19,7 @@ http {
         }
 
         location /api {
-            proxy_pass http://app:3000/api;
+            proxy_pass http://magic-app:3000/api;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
