feat: make it possible to allow strapi cdn host in dev

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_URL="postgresql://magic:magic@magic-postgres:5432/magic?schema=public"
 NEXT_PUBLIC_STRAPI_URL="http://172.17.0.1:1337"
 STRAPI_API_URL="http://172.17.0.1:1337/api"
 STRAPI_API_TOKEN=""
+STRAPI_CDN_HOST=""
 
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
