--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@keycloak/keycloak-admin-client": "^24.0.5",
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
