feat: add cloudflare captcha to auth related forms

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ NEXTAUTH_URL_INTERNAL="http://localhost:3000"
 NEXTAUTH_SECRET=""
 USER_SETTINGS_JWT_SECRET=""
 
+NEXT_PUBLIC_TURNSTILE_SITEKEY=""
+TURNSTILE_SECRET=""
+
 SMTP_HOST="sandbox.smtp.mailtrap.io"
 SMTP_PORT="2525"
 SMTP_USER=""
