--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
     "@keycloak/keycloak-admin-client": "^24.0.5",
+    "@marsidev/react-turnstile": "^1.1.0",
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.1.2",
