chore(docker-compose.prod.yml): correctly set NEXT_PUBLIC_TURNSTILE_SITEKEY env variable

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -41,7 +41,7 @@ services:
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       USER_SETTINGS_JWT_SECRET: ${USER_SETTINGS_JWT_SECRET}
       TURNSTILE_SECRET: ${TURNSTILE_SECRET}
-      NEXT_PUBLIC_TURNSTILE_SITEKEY: ${NEXT_PUBLIC_TURNSTILE_SITEKEY}
+      NEXT_PUBLIC_TURNSTILE_SITEKEY: 0x4AAAAAAA11o5rNvbUuAWSJ
 
       STRAPI_API_URL: ${STRAPI_API_URL}
       STRAPI_API_TOKEN: ${STRAPI_API_TOKEN}
