fix: set missing printful env variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,8 @@ jobs:
             STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET=${{ secrets.STRIPE_PRIVACY_GUIDES_WEBHOOK_SECRET }} \
             STRIPE_GENERAL_SECRET_KEY=${{ secrets.STRIPE_GENERAL_SECRET_KEY }} \
             STRIPE_GENERAL_WEBHOOK_SECRET=${{ secrets.STRIPE_GENERAL_WEBHOOK_SECRET }} \
+            PRINTFUL_API_KEY=${{ secrets.PRINTFUL_API_KEY }} \
+            PRINTFUL_WEBHOOK_SECRET=${{ secrets.PRINTFUL_WEBHOOK_SECRET }} \
             KEYCLOAK_URL=${{ secrets.KEYCLOAK_URL }} \
             KEYCLOAK_CLIENT_SECRET=${{ secrets.KEYCLOAK_CLIENT_SECRET }} \
             BTCPAY_URL=${{ secrets.BTCPAY_URL }} \
