--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ KEYCLOAK_CLIENT_ID="app"
 KEYCLOAK_CLIENT_SECRET=""
 KEYCLOAK_REALM_NAME="magic"
 
+PRINTFUL_API_KEY=""
 PRINTFUL_WEBHOOK_SECRET=""
 
 MONERO_APPLICATION_RECIPIENT=""
