--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -61,6 +61,9 @@ services:
       STRIPE_GENERAL_SECRET_KEY: ${STRIPE_GENERAL_SECRET_KEY}
       STRIPE_GENERAL_WEBHOOK_SECRET: ${STRIPE_GENERAL_WEBHOOK_SECRET}
 
+      PRINTFUL_API_KEY: ${PRINTFUL_API_KEY}
+      PRINTFUL_WEBHOOK_SECRET: ${PRINTFUL_WEBHOOK_SECRET}
+
       KEYCLOAK_URL: ${KEYCLOAK_URL}
       KEYCLOAK_CLIENT_ID: app
       KEYCLOAK_CLIENT_SECRET: ${KEYCLOAK_CLIENT_SECRET}
