feat: add option for connecting PG forum account in settings page

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,9 @@ NEXT_PUBLIC_MONERO_APPLICATION_RECIPIENT=""
 NEXT_PUBLIC_FIRO_APPLICATION_RECIPIENT=""
 NEXT_PUBLIC_PRIVACY_GUIDES_APPLICATION_RECIPIENT=""
 NEXT_PUBLIC_GENERAL_APPLICATION_RECIPIENT=""
+
+PRIVACYGUIDES_DISCOURSE_URL=""
+PRIVACYGUIDES_DISCOURSE_CONNECT_SECRET=""
+PRIVACYGUIDES_DISCOURSE_API_KEY=""
+PRIVACYGUIDES_DISCOURSE_API_USERNAME=""
+PRIVACYGUIDES_DISCOURSE_MEMBERSHIP_GROUP_ID=""
