--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@keycloak/keycloak-admin-client": "^24.0.5",
     "@marsidev/react-turnstile": "^1.1.0",
+    "@noble/ed25519": "^2.2.2",
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.1.2",
