--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "babel-plugin-macros": "^3.1.0",
-    "contentlayer": "^0.3.4",
+    "contentlayer": "0.3.0",
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
@@ -35,7 +35,7 @@
     "image-size": "1.0.0",
     "mdx-bundler": "^9.0.0",
     "next": "13.1.6",
-    "next-contentlayer": "^0.3.4",
+    "next-contentlayer": "0.3.0",
     "next-themes": "^0.2.0",
     "pliny": "0.0.10",
     "postcss": "^8.4.16",
