Make "apply for a grant" form work without js

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ BTCPAY_WEBHOOK_SECRET_NOSTR=generated_by_btcpay
 BTCPAY_WEBHOOK_SECRET_OPS=generated_by_btcpay
 STRIPE_WEBHOOK_SECRET=generated_by_stripe
 
+# Form security secrets
+FORM_SECRET=random-secret-string-min-32-chars
+COOKIE_SECRET=random-secret-string-min-32-chars
+
