fix: add missing env variables to docker-compose.prod.yml and other adjustments

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,15 +75,13 @@ services:
       BTCPAY_STORE_ID: ${BTCPAY_STORE_ID}
       BTCPAY_WEBHOOK_SECRET: ${BTCPAY_WEBHOOK_SECRET}
 
-      MONERO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
-      FIRO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
-      PRIVACY_GUIDES_APPLICATION_RECIPIENT: monerofund@magicgrants.org
-      GENERAL_APPLICATION_RECIPIENT: monerofund@magicgrants.org
+      PRIVACYGUIDES_DISCOURSE_URL: ${PRIVACYGUIDES_DISCOURSE_URL}
+      PRIVACYGUIDES_DISCOURSE_CONNECT_SECRET: ${PRIVACYGUIDES_DISCOURSE_CONNECT_SECRET}
+      PRIVACYGUIDES_DISCOURSE_API_KEY: ${PRIVACYGUIDES_DISCOURSE_API_KEY}
+      PRIVACYGUIDES_DISCOURSE_API_USERNAME: ${PRIVACYGUIDES_DISCOURSE_API_USERNAME}
+      PRIVACYGUIDES_DISCOURSE_MEMBERSHIP_GROUP_ID: ${PRIVACYGUIDES_DISCOURSE_MEMBERSHIP_GROUP_ID}
 
-      NEXT_PUBLIC_MONERO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
-      NEXT_PUBLIC_FIRO_APPLICATION_RECIPIENT: monerofund@magicgrants.org
-      NEXT_PUBLIC_PRIVACY_GUIDES_APPLICATION_RECIPIENT: monerofund@magicgrants.org
-      NEXT_PUBLIC_GENERAL_APPLICATION_RECIPIENT: monerofund@magicgrants.org
+      ATTESTATION_PRIVATE_KEY_HEX: ${ATTESTATION_PRIVATE_KEY_HEX}
     depends_on:
       - magic-postgres
     networks:
