--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
+    "google-spreadsheet": "^4.1.4",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^9.0.0",
