--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^9.0.0",
-    "next": "13.1.6",
+    "next": "^13.5.8",
     "next-contentlayer": "0.3.0",
     "next-themes": "^0.2.0",
     "pliny": "0.0.10",
