--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts"
   },
+  "engines": {
+    "node": "^18.0.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -17,7 +20,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/bundle-analyzer": "13.1.6",
-    "@next/font": "13.1.6",
     "@octokit/rest": "^19.0.8",
     "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -31,7 +33,7 @@
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^9.0.0",
-    "next": "13.1.6",
+    "next": "^13.5.8",
     "next-contentlayer": "0.3.0",
     "next-themes": "^0.2.0",
     "pliny": "0.0.10",
