--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
+    "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
