npm i public-google-sheets-parser

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-themes": "^0.2.0",
     "pliny": "0.0.10",
     "postcss": "^8.4.16",
+    "public-google-sheets-parser": "^1.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
