--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,16 @@
-# visit https://giscus.app to get your Giscus ids
-NEXT_PUBLIC_GISCUS_REPO=
-NEXT_PUBLIC_GISCUS_REPOSITORY_ID=
-NEXT_PUBLIC_GISCUS_CATEGORY=
-NEXT_PUBLIC_GISCUS_CATEGORY_ID=
-NEXT_PUBLIC_UTTERANCES_REPO=
-NEXT_PUBLIC_DISQUS_SHORTNAME=
-
-
-MAILCHIMP_API_KEY=
-MAILCHIMP_API_SERVER=
-MAILCHIMP_AUDIENCE_ID=
-
-BUTTONDOWN_API_KEY=
-
-CONVERTKIT_API_KEY=
-# curl https://api.convertkit.com/v3/forms?api_key=<your_public_api_key> to get your form ID
-CONVERTKIT_FORM_ID=
-
-KLAVIYO_API_KEY=
-KLAVIYO_LIST_ID=
-
-REVUE_API_KEY=
-
-EMAILOCTOPUS_API_KEY=
-EMAILOCTOPUS_LIST_ID=
+GH_ACCESS_TOKEN=
+GH_ORG=OpenSats
+GH_APP_REPO=applications
+GH_REPORTS_REPO=reports
+SENDGRID_API_KEY=
+SENDGRID_RECIPIENT=
+SENDGRID_RECEPIENT=
+SENDGRID_CC=
+SENDGRID_VERIFIED_SENDER=
+BTCPAY_STORE_ID=
+BTCPAY_URL=
+BTCPAY_API_KEY=
+STRIPE_SECRET_KEY=
+ZAPRITE_USER_UUID=
+NEXT_PUBLIC_GOOGLE_DOC_ID=
+NEXT_PUBLIC_GOOGLE_API_KEY=
