Remove CC email functionality to ensure only grantee receives the report

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,10 +5,8 @@ GH_ORG=OpenSats
 GH_REPORTS_REPO=reports
 
 # Email Configuration
-EMAIL_HOST=your_smtp_host
-EMAIL_USER=your_email_user
-EMAIL_PASS=your_email_password
-REPORT_CC_EMAIL=reports@opensats.org
+SENDGRID_API_KEY=your_sendgrid_api_key
+EMAIL_FROM=support@opensats.org
 
 # Session Configuration
 SECRET_COOKIE_PASSWORD=complex_password_at_least_32_characters_long
