--- a/package.json
+++ b/package.json
@@ -20,28 +20,33 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/bundle-analyzer": "13.1.6",
-    "@octokit/rest": "^19.0.8",
     "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/crypto-js": "^4.2.2",
+    "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.13",
     "babel-plugin-macros": "^3.1.0",
+    "clsx": "^2.1.1",
     "contentlayer": "0.3.0",
+    "crypto-js": "^4.2.0",
     "email-validator": "^2.0.4",
     "esbuild": "0.17.5",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
+    "iron-session": "^6.3.1",
     "mdx-bundler": "^9.0.0",
     "next": "^13.5.8",
     "next-contentlayer": "0.3.0",
     "next-themes": "^0.2.0",
+    "nodemailer": "^6.10.0",
     "pliny": "0.0.10",
     "postcss": "^8.4.16",
     "public-google-sheets-parser": "^1.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-markdown": "^10.1.0",
     "react-modal": "^3.16.1",
     "react-youtube": "^10.1.0",
     "reading-time": "1.5.0",
@@ -61,13 +66,18 @@
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
+    "@octokit/rest": "^21.1.1",
     "@svgr/webpack": "^6.3.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/react": "^18.0.18",
+    "@types/email-validator": "^1.0.30",
+    "@types/node": "^22.13.10",
+    "@types/react": "^18.3.19",
+    "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
+    "dotenv": "^16.4.7",
     "esbuild-register": "3.4.2",
     "eslint": "^8.23.0",
     "eslint-config-next": "13.1.6",
@@ -80,6 +90,8 @@
     "lint-staged": "^13.0.0",
     "prettier": "^2.7.0",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "react-hook-form": "^7.54.2",
+    "ts-node": "^10.9.2",
     "typescript": "^4.8.3"
   },
   "lint-staged": {
